--- a/LostInSpace/LostInSpace.vcxproj
+++ b/LostInSpace/LostInSpace.vcxproj
@@ -123,6 +123,8 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MenuButton.cpp" />
     <ClCompile Include="MenuState.cpp" />
+    <ClCompile Include="OptionsButton.cpp" />
+    <ClCompile Include="OptionsMenu.cpp" />
     <ClCompile Include="SplashScreen.cpp" />
     <ClCompile Include="State.cpp" />
   </ItemGroup>
@@ -131,6 +133,8 @@
     <ClInclude Include="library.h" />
     <ClInclude Include="MenuButton.h" />
     <ClInclude Include="MenuState.h" />
+    <ClInclude Include="OptionsButton.h" />
+    <ClInclude Include="OptionsMenu.h" />
     <ClInclude Include="SplashScreen.h" />
     <ClInclude Include="State.h" />
   </ItemGroup>
